[package]
name = "xtouch-wing"
version = "0.1.0"
edition = "2024"

[dependencies]
rosc = "0.10"
anyhow = "1.0"

clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
colored = "2.1"
serde = { version = "1.0.228", features = ["derive"] }
figment = { version = "0.10.19", features = ["yaml", "env"] }
serde_yaml = "0.9.34"
