[package]
name = "xtouch-wing"
version = "0.1.0"
edition = "2024"

[dependencies]
rosc = "0.10"
anyhow = "1.0"

clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
colored = "2.1"
serde = { version = "1.0.228", features = ["derive"] }
figment = { version = "0.10.19", features = ["yaml", "env"] }
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
tokio-macros = "2.6.0"
midir = "0.10.3"
midly = "0.5.3"
rumqttc = "0.25.0"
regex = "1.12.2"
